--- a/config.ini
+++ b/config.ini
@@ -1,15 +1,15 @@
 [standard]
 verbose = True
-log_file = Logs/random.txt
-seed = 1
+log_file = Logs/test.txt
+seed = 0
 
 [active_learning]
-query_strategy = least_confident
-init_labels = 20
-query_labels = 10
-num_iterations = 10
+query_strategy = thing
+init_labels = 2
+query_labels = 2
+num_iterations = 50
 reset_model = True
-dropout_iterations = 2
+dropout_iterations = 10
 
 [model]
 val_per = 0.2
@@ -18,10 +18,10 @@ batch_size = 64
 momentum = 0.5
 
 [early_stopping]
-min_epochs = 8
-max_epochs = 10
+min_epochs = 5
+max_epochs = 500
 batch = 5
 target = 0.5
 
 [dataset]
-dataset_dir = C:\Users\Jacob\Documents\Datasets\CRCHistoPhenotypes_2016_04_28\Classification
+dataset_dir = Classification
